change styling to fix tile size on mobile

--- a/assets/homepage/CSS/style.css
+++ b/assets/homepage/CSS/style.css
@@ -111,7 +111,6 @@ body {
     box-shadow: 5px 5px 8px #959595;
     overflow: hidden;
     margin: 0rem 15rem;
-    min-height: 20rem;
     display: flex;
     gap: 5rem;
 }
@@ -132,36 +131,37 @@ body {
 
 @media only screen and (max-width: 1200px) {
     .about-me-container{
+        margin: 0rem 5rem;
+    }
+}
+
+@media only screen and (max-width: 980px) {
+    .about-me-container{
         flex-direction: column-reverse;
         gap:unset;
-        margin: 0rem 7rem;
     }
     .profile-img{
         min-width: none;
         min-height: 30rem;
     }
-}
-
-@media only screen and (max-width: 980px) {
     .navbar{
         flex-direction: column;
-        height: 19rem;
         z-index: 2;
     }
     .navbar h2{
         width: 90%;
         text-align: center;
-        font-size: 5em;
+        font-size: 2em;
         padding: 1rem;
     }
     .nav-container{
-        font-size: 3em;
+        font-size: 1em;
         /* border-right: 1px solid white;
         border-top: 1px solid white; */
     }
     .landing-text{
         width: 60%;
-        font-size: 60pt;
+        font-size: 20pt;
         
     }
     .sticky {
@@ -172,11 +172,38 @@ body {
     }
 }
 
+@media only screen and (min-width: 600px) and (max-width: 980px){
+    .about-me-container{
+        margin: 0rem 10rem;
+    }
+    .profile-img{
+        min-height: 20rem;
+    }
+}
+
 @media only screen and (max-width: 600px){
     .icon-wrapper {
-        bottom: 40rem;
+        bottom: 13rem;
     }
-    .landing-text {
-        color: red;
+    .about-me-container {
+        margin: 0rem 5rem;
+        font-size: x-small;
+    }
+    .profile-img{
+        min-height: 17rem;
+        min-width: 14rem;
+    }
+    .bio-wrapper{
+        padding-left: 1rem;
+    }
+}
+
+@media only screen and (max-width: 390px){
+    .nav-container{
+        font-size: 0.8em;
+    } 
+    .profile-img{
+        min-height: 13rem;
+        min-width: 13rem;
     }
 }
